--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ scikit-learn
 requests
 Pillow
 gunicorn == 20.0.4
-torch==1.7.1+cu101 
-torchvision==0.8.2+cu101 
+torch==1.7.1 
+torchvision==0.8.2 
