--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+-f https://download.pytorch.org/whl/torch_stable.html
 numpy
 pandas
 Flask
@@ -5,5 +6,5 @@ scikit-learn
 requests
 Pillow
 gunicorn ==20.0.4
-torch==1.7.1 
-torchvision==0.8.2 
+torch==1.7.1+cpu
+torchvision==0.8.1+cpu
